# GMTK-Game-Jam-2022

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.txt
assets/: music_license.txt
include/: Sample.hpp  Settings.hpp
include/Engine/: Engine.hpp  Window.hpp
include/Engine/Components/: Animator.hpp  Collider.hpp  Drawable.hpp  Physics.hpp
include/GUI/: Panel.hpp
include/UI/: Button.hpp  ProgressBar.hpp
include/animations/: Bezier.hpp  BezierColor.hpp  BezierFillColor.hpp  BezierOutlineColor.hpp  BezierScale.hpp
include/engine/: Assets.hpp  Color.hpp  Component.hpp  Core.hpp  Drawable.hpp  Node.hpp  Object.hpp  Renderer.hpp  Sprite.hpp  State.hpp  StateMachine.hpp  Store.hpp  Timer.hpp  Window.hpp
include/engine/components/: Animation.hpp  Animator.hpp  Bezier.hpp  Collider.hpp  Drawable.hpp  HitBox.hpp  Physics.hpp
include/engine/drawables/: Arc.hpp  CircleShape.hpp  RectangleShape.hpp  Shape.hpp  Sprite.hpp  Text.hpp
include/game/: Settings.hpp  TileDirection.hpp  TileManager.hpp
include/states/: BoardGameManager.hpp  Character.hpp  CharacterCallbacks.hpp  CharacterType.hpp  Characters.hpp  Tile.hpp  TileManager.hpp  TileType.hpp
include/states/description/: DescriptionState.hpp
include/states/game/: GameOverState.hpp  GameState.hpp
include/states/game/gamestates/: GameInitState.hpp  GameOverState.hpp  GamePausedState.hpp  GamePlayState.hpp
include/states/game/gamestates/gameplaystates/: GamePlayLookaroundState.hpp  GamePlaySelectState.hpp
include/states/menu/: MenuState.hpp
src/: Settings.cpp  main.cpp
src/Engine/: Engine.cpp  Window.cpp
src/Engine/Components/: Animator.cpp  Collider.cpp  Drawable.cpp  Physics.cpp
src/GUI/: Panel.cpp
src/UI/: Button.cpp  ProgressBar.cpp
src/animations/: Bezier.cpp  BezierColor.cpp  BezierFillColor.cpp  BezierOutlineColor.cpp  BezierScale.cpp
src/engine/: Animator.cpp  Assets.cpp  Collider.cpp  Component.cpp  Core.cpp  Drawable.cpp  Node.cpp  Object.cpp  Physics.cpp  Renderer.cpp  Settings.cpp  Sprite.cpp  State.cpp  StateMachine.cpp  Store.cpp  Timer.cpp  Window.cpp
src/engine/components/: Animation.cpp  Animator.cpp  Bezier.cpp  Collider.cpp  Physics.cpp
src/engine/drawables/: Arc.cpp  CircleShape.cpp  RectangleShape.cpp  Shape.cpp  Sprite.cpp  Text.cpp
src/game/: Settings.cpp
src/states/: BoardGameManager.cpp  Character.cpp  CharacterCallbacks.cpp  Settings.cpp  Tile.cpp  TileManager.cpp
src/states/description/: DescriptionState.cpp
src/states/game/: GameOverState.cpp  GameState.cpp
src/states/game/gamestates/: GameInitState.cpp  GameOverState.cpp  GamePausedState.cpp  GamePlayState.cpp
src/states/game/gamestates/gameplaystates/: GamePlayLookaroundState.cpp  GamePlaySelectState.cpp
src/states/menu/: MenuState.cpp  State.cpp
